--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js"
-  },"engines": {
-    "node":"18.13.0"
+  },
+  "engines": {
+    "node": "18.13.0"
   },
   "keywords": [],
   "author": "",
